--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "stylelint-scss": "^6.5.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
