--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
