--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint:css:fix": "stylelint 'src/**/*.{css,scss}' --fix",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/react": "^16.0.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
@@ -21,7 +23,8 @@
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "vitest": "^2.1.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
@@ -35,6 +38,7 @@
     "@storybook/react": "^8.3.2",
     "@storybook/react-vite": "^8.3.2",
     "@storybook/test": "^8.3.2",
+    "@testing-library/jest-dom": "^6.5.0",
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -46,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.9.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "sass": "^1.78.0",
     "storybook": "^8.3.2",
